fixed bug with overflow:hidden

--- a/src/App.css
+++ b/src/App.css
@@ -358,6 +358,10 @@ li:hover
 /* Media Queries */
 
 @media only screen and (max-width: 600px) {
+
+  .App {
+    overflow: hidden
+  }
   
   .home {
     width: 100%;
